[tool.poetry]
name = "kp-regression"
version = "0.1.0"
description = ""
authors = ["Ismail Gadzhiev <ismailgadzhievff@gmail.com>"]
readme = "README.md"
packages = [{include = "kp_regression"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.2"
numpy = "1.26.0"
scikit-learn = "^1.5.0"
torch = "2.2.0"
pytorch-lightning = "^2.3.0"
torchsummary = "^1.5.1"
pyyaml = "^6.0.1"
openpyxl = "^3.1.4"
fastparquet = "^2024.5.0"
pyarrow = "^16.1.0"
matplotlib = "^3.9.0"
lightgbm = "4.4.0"
catboost = "^1.2.5"
xgboost = "^2.0.3"
tqdm = "^4.66.4"


seaborn = "^0.13.2"
[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "kp_regression.run_experiment:run"
